--- a/views/common/header.html
+++ b/views/common/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+
 
 <head>
 
@@ -61,53 +61,52 @@
                 <div class="menu-meniu-sus-container">
                     <ul id="main_header" class="main-header">
                         <li id="menu-item-97537" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-97537">
-                            <a href="/home" aria-current="page">Zuhause</a></li>
+                            <a href="/home" aria-current="page">Casa</a></li>
                         <li id="menu-item-16" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-16">
-                            <a href="/movies">Show</a>
+                            <a href="/movies">Espectáculo</a>
                             <ul class="sub-menu">
                                  <li id="menu-item-8799" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-8799">
-                                    <a href="/movies">Nach Bewertung &nbsp;&nbsp;&nbsp;&nbsp;sortieren</a></li>
+                                    <a href="/movies">Ordenar por &nbsp;&nbsp;&nbsp;calificación</a></li>
                                 <li id="menu-item-8799" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-8799">
-                                    <a href="/movies/random">zufällige Show</a></li>
+                                    <a href="/movies/random">espectáculo al azar</a></li>
                                 <li id="menu-item-8799" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-8799">
-                                    <a href="/movies/lasted">dauerte Show</a></li>
+                                    <a href="/movies/lasted">espectáculo durado</a></li>
                             </ul>
                         </li>
-                        <li id="menu-item-24" class="genres menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-24">
-                            <a href="/movies">Genre</a>
+                        <li class="genres menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-24">
+                            <a href="/movies">Género</a>
                             <ul class="sub-menu">
                                 <li id="menu-item-8799" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-8799">
-                                    <a href="/movies/tags/Aktion">Aktion</a></li>
+                                    <a href="/movies/tags/Acción">Acción</a></li>
                                 <li id="menu-item-73949" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-73949">
-                                    <a href="/movies/tags/Abenteuer">Abenteuer</a></li>
+                                    <a href="/movies/tags/Aventura">Aventura</a></li>
                                 <li id="menu-item-73955" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-73955">
-                                    <a href="/movies/tags/Komödie">Komödie</a></li>
+                                    <a href="/movies/tags/Comedia">Comedia</a></li>
                                 <li id="menu-item-4971" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4971">
-                                    <a href="/movies/tags/Theater">Theater</a></li>
+                                    <a href="/movies/tags/Teatro">Teatro</a></li>
                                 <li id="menu-item-4970" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4970">
-                                    <a href="/movies/tags/Fantasie">Fantasie</a></li>
+                                    <a href="/movies/tags/Fantasía">Fantasía</a></li>
                                 <li id="menu-item-4969" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4969">
-                                    <a href="/movies/tags/Harem">Harem</a></li>
+                                    <a href="/movies/tags/Harén">Harén</a></li>
                                 <li id="menu-item-4968" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4968">
-                                    <a href="/movies/tags/Historisches">Historisches
+                                    <a href="/movies/tags/Histórico">Histórico
                                     </a></li>
                                 <li id="menu-item-4967" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4967">
-                                    <a href="/movies/tags/Idole">Idole</a></li>
+                                    <a href="/movies/tags/ídolos">ídolos</a></li>
                                 <li id="menu-item-4966" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4966">
                                     <a href="/movies/tags/Isekai">Isekai</a></li>
                                 <li id="menu-item-4965" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4965">
-                                    <a href="/movies/tags/Magische">Magische</a></li>
+                                    <a href="/movies/tags/Magia">Magia</a></li>
                                 <li id="menu-item-4964" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4964">
-                                    <a href="/movies/tags/Mädchen">Mädchen</a></li>
+                                    <a href="/movies/tags/Chica">Chica</a></li>
                                 <li id="menu-item-4963" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4963">
                                     <a href="/movies/tags/Mecha">Mecha</a></li>
                                 <li id="menu-item-4962" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4962">
-                                    <a href="/movies/tags/Musik">Musik</a></li>
+                                    <a href="/movies/tags/Música">Música</a></li>
                                 <li id="menu-item-4961" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4961">
-                                    <a href="/movies/tags/Geheimnis">Geheimnis</a></li>
+                                    <a href="/movies/tags/Secreto">Secreto</a></li>
                                 <li id="menu-item-4960" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4960">
-                                    <a href="/movies/tags/apokalyptischen">apokalyptischen</a></li>
-
+                                    <a href="/movies/tags/apocalíptico">apocalíptico</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -116,7 +115,7 @@
             <div class="headitems ">
                 <div id="advc-menu" class="search">
                     <form method="get" id="searchform" action="/home/movies/name">
-                        <input type="text" placeholder="Suche..." name="name" id="s" value="" autocomplete="off">
+                        <input type="text" placeholder="búsqueda..." name="name" id="s" value="" autocomplete="off">
                         <button class="search-button" type="submit">
                             <span class="icon-search2"></span>
                         </button>
@@ -135,8 +134,8 @@
                             alt='logo'/></a></div>
         </header>
         <div class="search_responsive">
-            <form method="get" id="form-search-resp" class="form-resp-ab" action="https://watchtvepisodes.me"><input
-                        type="text" placeholder="Search..." name="s" id="ms" value="" autocomplete="off">
+            <form method="get" id="form-search-resp" class="form-resp-ab" action="/home/movies/name"><input
+                        type="text" placeholder="Search..." name="name" id="ms" value="" autocomplete="off">
                 <button type="submit" class="search-button"><span class="icon-search3"></span></button>
             </form>
             <div class="live-search"></div>
@@ -145,53 +144,53 @@
             <div class="menu">
                 <div class="menu-meniu-sus-container">
                     <ul id="main_header" class="resp">
-                        <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-97537"><a href="/home">Zuhause</a>
+                        <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-97537"><a href="/home">Casa</a>
                         </li>
                         <li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current-menu-ancestor current-menu-parent menu-item-has-children menu-item-16">
-                            <a href="/movies" aria-current="page">Show</a>
+                            <a href="/movies">Espectáculo</a>
                             <ul class="sub-menu">
                                 <li id="menu-item-8799" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-8799">
-                                    <a href="/movies">Nach Bewertung &nbsp;&nbsp;&nbsp;&nbsp;sortieren</a></li>
+                                    <a href="/movies">Ordenar por &nbsp;&nbsp;&nbsp;calificación</a></li>
                                 <li id="menu-item-8799" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-8799">
-                                    <a href="/movies/random">zufällige Show</a></li>
+                                    <a href="/movies/random">espectáculo al azar</a></li>
                                 <li id="menu-item-8799" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-8799">
-                                    <a href="/movies/lasted">dauerte Show</a></li>
+                                    <a href="/movies/lasted">espectáculo durado</a></li>
                             </ul>
                         </li>
                         <li class="genres menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-24">
-                            <a href="/movies">Genre</a>
+                            <a href="/movies">Género</a>
                             <ul class="sub-menu">
                                 <li id="menu-item-8799" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-8799">
-                                    <a href="/movies/tags/Aktion">Aktion</a></li>
+                                    <a href="/movies/tags/Acción">Acción</a></li>
                                 <li id="menu-item-73949" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-73949">
-                                    <a href="/movies/tags/Abenteuer">Abenteuer</a></li>
+                                    <a href="/movies/tags/Aventura">Aventura</a></li>
                                 <li id="menu-item-73955" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-73955">
-                                    <a href="/movies/tags/Komödie">Komödie</a></li>
+                                    <a href="/movies/tags/Comedia">Comedia</a></li>
                                 <li id="menu-item-4971" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4971">
-                                    <a href="/movies/tags/Theater">Theater</a></li>
+                                    <a href="/movies/tags/Teatro">Teatro</a></li>
                                 <li id="menu-item-4970" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4970">
-                                    <a href="/movies/tags/Fantasie">Fantasie</a></li>
+                                    <a href="/movies/tags/Fantasía">Fantasía</a></li>
                                 <li id="menu-item-4969" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4969">
-                                    <a href="/movies/tags/Harem">Harem</a></li>
+                                    <a href="/movies/tags/Harén">Harén</a></li>
                                 <li id="menu-item-4968" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4968">
-                                    <a href="/movies/tags/Historisches">Historisches
+                                    <a href="/movies/tags/Histórico">Histórico
                                     </a></li>
                                 <li id="menu-item-4967" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4967">
-                                    <a href="/movies/tags/Idole">Idole</a></li>
+                                    <a href="/movies/tags/ídolos">ídolos</a></li>
                                 <li id="menu-item-4966" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4966">
                                     <a href="/movies/tags/Isekai">Isekai</a></li>
                                 <li id="menu-item-4965" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4965">
-                                    <a href="/movies/tags/Magische">Magische</a></li>
+                                    <a href="/movies/tags/Magia">Magia</a></li>
                                 <li id="menu-item-4964" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4964">
-                                    <a href="/movies/tags/Mädchen">Mädchen</a></li>
+                                    <a href="/movies/tags/Chica">Chica</a></li>
                                 <li id="menu-item-4963" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4963">
                                     <a href="/movies/tags/Mecha">Mecha</a></li>
                                 <li id="menu-item-4962" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4962">
-                                    <a href="/movies/tags/Musik">Musik</a></li>
+                                    <a href="/movies/tags/Música">Música</a></li>
                                 <li id="menu-item-4961" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4961">
-                                    <a href="/movies/tags/Geheimnis">Geheimnis</a></li>
+                                    <a href="/movies/tags/Secreto">Secreto</a></li>
                                 <li id="menu-item-4960" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4960">
-                                    <a href="/movies/tags/apokalyptischen">apokalyptischen</a></li>
+                                    <a href="/movies/tags/apocalíptico">apocalíptico</a></li>
                             </ul>
                         </li>
                     </ul>
