--- a/views/home.html
+++ b/views/home.html
@@ -3,7 +3,7 @@
         </div>
         <div class="module">
             <div class="content">
-                <header><h2>Featured TV Shows</h2>
+                <header><h2>Programas de TV destacados</h2>
                     <div class="nav_items_module">
                         <a class="btn prevf">
                             <i class="icon-caret-left"></i>
@@ -18,7 +18,7 @@
                                 <article id="post-featured-9189" class="item tvshows">
                                     <div class="poster"><img src="{{.ImgUrl}}" alt="{{.MovieName}}">
                                         <div class="rating"><span class="icon-star2"></span> {{.MovieMark}}</div>
-                                        <div class="featu">Featured</div>
+                                        <div class="featu">Festacado</div>
                                         <a href="/episode/{{.Id}}">
                                             <div class="see"></div>
                                         </a></div>
@@ -36,9 +36,9 @@
                 <div id="featload" class="load_modules">Loading..</div>
                 <style>.rpwe-block ul{list-style:none !important;margin-left:0 !important;padding-left:0 !important;width:100%;height:770px;box-shadow:0 8px 8px 0 rgba(0,0,0,0.2),0 12px 30px 0 rgba(0,0,0,0.19)}.rpwe-block li{border-bottom:1px solid rgba(255,255,255,0);margin-bottom:4px;padding-bottom:1px;list-style-type:none;border-radius:25px;background:#21212180;padding-left:10px}.rpwe-block a{display:inline !important;text-decoration:none}.rpwe-block h3{background:none !important;clear:none;margin-bottom:0 !important;margin-top:0 !important;font-weight:400;font-size:15px !important;line-height:1.5em;text-align:center}.rpwe-thumb{border:1px solid #eee !important;box-shadow:none !important;margin:2px 10px 2px 0;padding:3px !important}.rpwe-summary{font-size:12px}.rpwe-time{color:#ffffff;font-size:12px;text-align:right}.rpwe-comment{color:#bbb;font-size:11px;padding-left:5px}.rpwe-alignleft{display:inline;float:left}.rpwe-alignright{display:inline;float:right}.rpwe-aligncenter{display:block;margin-left:auto;margin-right:auto}.rpwe-clearfix:before,.rpwe-clearfix:after{content:"";display:table !important}.rpwe-clearfix:after{clear:both}.rpwe-clearfix{zoom:1}</style>
                 <header>
-                    <h2>Popular shows</h2>
+                    <h2>Shows populares</h2>
                     <span>
-                <a href="/movies" class="see-all">See all</a></span>
+                <a href="/movies" class="see-all">Ver todo</a></span>
                 </header>
                 <div id="tvload" class="load_modules">Loading..</div>
                 <div class="items">
@@ -71,39 +71,39 @@
                     </aside>
                   </div>
                 <div class="dt_mainmeta">
-                    <nav class="genres"><h2>Genre</h2>
+                    <nav class="genres"><h2>Género</h2>
                         <ul class="genres scrolling">
                             <li id="menu-item-8799" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-8799">
-                                <a href="/movies/tags/Aktion">Aktion</a></li>
+                                <a href="/movies/tags/Acción">Acción</a></li>
                             <li id="menu-item-73949" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-73949">
-                                <a href="/movies/tags/Abenteuer">Abenteuer</a></li>
+                                <a href="/movies/tags/Aventura">Aventura</a></li>
                             <li id="menu-item-73955" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-73955">
-                                <a href="/movies/tags/Komödie">Komödie</a></li>
+                                <a href="/movies/tags/Comedia">Comedia</a></li>
                             <li id="menu-item-4971" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4971">
-                                <a href="/movies/tags/Theater">Theater</a></li>
+                                <a href="/movies/tags/Teatro">Teatro</a></li>
                             <li id="menu-item-4970" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4970">
-                                <a href="/movies/tags/Fantasie">Fantasie</a></li>
+                                <a href="/movies/tags/Fantasía">Fantasía</a></li>
                             <li id="menu-item-4969" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4969">
-                                <a href="/movies/tags/Harem">Harem</a></li>
+                                <a href="/movies/tags/Harén">Harén</a></li>
                             <li id="menu-item-4968" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4968">
-                                <a href="/movies/tags/Historisches">Historisches
+                                <a href="/movies/tags/Histórico">Histórico
                                 </a></li>
                             <li id="menu-item-4967" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4967">
-                                <a href="/movies/tags/Idole">Idole</a></li>
+                                <a href="/movies/tags/ídolos">ídolos</a></li>
                             <li id="menu-item-4966" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4966">
                                 <a href="/movies/tags/Isekai">Isekai</a></li>
                             <li id="menu-item-4965" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4965">
-                                <a href="/movies/tags/Magische">Magische</a></li>
+                                <a href="/movies/tags/Magia">Magia</a></li>
                             <li id="menu-item-4964" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4964">
-                                <a href="/movies/tags/Mädchen">Mädchen</a></li>
+                                <a href="/movies/tags/Chica">Chica</a></li>
                             <li id="menu-item-4963" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4963">
                                 <a href="/movies/tags/Mecha">Mecha</a></li>
                             <li id="menu-item-4962" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4962">
-                                <a href="/movies/tags/Musik">Musik</a></li>
+                                <a href="/movies/tags/Música">Música</a></li>
                             <li id="menu-item-4961" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4961">
-                                <a href="/movies/tags/Geheimnis">Geheimnis</a></li>
+                                <a href="/movies/tags/Secreto">Secreto</a></li>
                             <li id="menu-item-4960" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4960">
-                                <a href="/movies/tags/apokalyptischen">apokalyptischen</a></li>
+                                <a href="/movies/tags/apocalíptico">apocalíptico</a></li>
                         </ul>
                     </nav>
                 </div>
