--- a/views/common/footer.html
+++ b/views/common/footer.html
@@ -127,9 +127,9 @@
     };
 </script>
 <script type='text/javascript'
-        src='https://watchtvepisodes.me/wp-content/plugins/contact-form-7/includes/js/scripts.js'></script>
+        src='/static/css/scripts.js'></script>
 <script type='text/javascript'
-        src='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/js/min/front.scripts.2.2.0.js'></script>
+        src='/static/css/front.scripts.2.2.0.js'></script>
 <script type='text/javascript'>
     var dtGonza = {
         "api": "https:\/\/watchtvepisodes.me\/wp-json\/dooplay\/search\/",
@@ -150,8 +150,8 @@
     };
 </script>
 <script type='text/javascript'
-        src='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/js/min/front.livesearch.2.2.0.js'></script>
-<script type='text/javascript' src='https://watchtvepisodes.me/wp-includes/js/wp-embed.min.js'></script>
+        src='/static/css/front.livesearch.2.2.0.js'></script>
+<script type='text/javascript' src='/static/css/wp-embed.min.js'></script>
 <div id="oscuridad"></div>
 </body>
 </html>
