--- a/views/common/header.html
+++ b/views/common/header.html
@@ -14,22 +14,22 @@
           media="screen"/>
     <meta name="viewport"
           content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-    <link rel='stylesheet' id='wp-block-library-css' href='https://watchtvepisodes.me/wp-includes/css/dist/block-library/style.min.css' type='text/css' media='all' />
-    <link rel='stylesheet' id='contact-form-7-css' href='https://watchtvepisodes.me/wp-content/plugins/contact-form-7/includes/css/styles.css' type='text/css' media='all' />
-    <link rel='stylesheet' id='owl-carousel-css' href='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/css/front.owl.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='wp-block-library-css' href='/static/css/style.min.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='contact-form-7-css' href='/static/css/styles.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='owl-carousel-css' href='/static/css/front.owl.css' type='text/css' media='all' />
     <link rel='stylesheet' id='fonts-css' href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700' type='text/css' media='all' />
-    <link rel='stylesheet' id='icons-css' href='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/css/front.icons.css' type='text/css' media='all' />
-    <link rel='stylesheet' id='scrollbar-css' href='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/css/front.crollbar.css' type='text/css' media='all' />
-    <link rel='stylesheet' id='theme-css' href='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/css/front.style.css' type='text/css' media='all' />
-    <link rel='stylesheet' id='color-scheme-css' href='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/css/colors.dark.css' type='text/css' media='all' />
-    <link rel='stylesheet' id='responsive-css' href='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/css/front.mobile.css' type='text/css' media='all' />
-    <script type='text/javascript' src='https://watchtvepisodes.me/wp-includes/js/jquery/jquery.js'></script>
-    <script type='text/javascript' src='https://watchtvepisodes.me/wp-includes/js/jquery/jquery-migrate.min.js'></script>
-    <script type='text/javascript' src='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/js/lib/mcsbscrollbar.js'></script>
-    <script type='text/javascript' src='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/js/lib/owlcarousel.js'></script>
-    <script type='text/javascript' src='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/js/lib/idtabs.js'></script>
-    <script type='text/javascript' src='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/js/lib/isrepeater.js'></script>
-    <script type='text/javascript' src='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/js/min/front.ajax.2.2.0.js'></script>
+    <link rel='stylesheet' id='icons-css' href='/static/css/front.icons.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='scrollbar-css' href='/static/css/front.crollbar.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='theme-css' href='/static/css/front.style.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='color-scheme-css' href='/static/css/colors.dark.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='responsive-css' href='/static/css/front.mobile.css' type='text/css' media='all' />
+    <script type='text/javascript' src='/static/css/jquery.js'></script>
+    <script type='text/javascript' src='/static/css/jquery-migrate.min.js'></script>
+    <script type='text/javascript' src='/static/css/mcsbscrollbar.js'></script>
+    <script type='text/javascript' src='/static/css/owlcarousel.js'></script>
+    <script type='text/javascript' src='/static/css/idtabs.js'></script>
+    <script type='text/javascript' src='/static/css/isrepeater.js'></script>
+    <script type='text/javascript' src='/static/css/front.ajax.2.2.0.js'></script>
    <link rel="wlwmanifest" type="application/wlwmanifest+xml" href="https://watchtvepisodes.me/wp-includes/wlwmanifest.xml" />
     <script type='text/javascript'>jQuery(document).ready(function(a) {
             'false' == dtGonza.mobile && a(window).load(function() {
